--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
 	--bg-color: #1e1f26;
+	--inverted-bg-color: #e8e8ea;
 
 	--primary-color: #2fb45a;
 	--secondary-color: #279349;
+	--inverted-primary-color: #225577;
+	--inverted-secondary-color: #0ebeff;
 }
