--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,9 @@
 .app.light {
 	--bg-color: #e8e8ea;
+	--inverted-bg-color: #1e1f26;
 
 	--primary-color: #225577;
 	--secondary-color: #0ebeff;
+	--inverted-primary-color: #2fb45a;
+	--inverted-secondary-color: #279349;
 }
