add storybook and settle it

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,13 +1,15 @@
-@import "reset";
-@import "variables/global";
-@import "themes/normal";
-@import "themes/dark";
+@import 'reset';
+@import 'variables/global';
+@import 'themes/light';
+@import 'themes/dark';
 
 .app {
-	font: var(--font-m);
-	background: var(--bg-color);
-	color: var(--primary-color);
 	min-height: 100vh;
+
+	background: var(--bg-color);
+	font: var(--font-m);
+
+	color: var(--primary-color);
 }
 
 .content-page {
