--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,7 @@
-.app.dark {
+.app-settings.dark {
 	--bg-color: #1e1f26;
 	--inverted-bg-color: #e8e8ea;
-	--primary-color: #2fb45a;
+	--primary-color: #568203;
 	--secondary-color: #279349;
 	--inverted-primary-color: #257;
 	--inverted-secondary-color: #0ebeff;
