fix all problems with linter

--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -5,7 +5,7 @@
 }
 
 .clear {
-	padding: 0px;
+	padding: 0;
 	border: none;
 	background: none;
 	outline: none;
@@ -15,6 +15,5 @@
 	font-weight: 500;
 	padding: 10px 15px;
 	border: 2px solid var(--primary-color);
-
 	background: none;
 }
