--- a/src/shared/ui/Loader/Loader.module.scss
+++ b/src/shared/ui/Loader/Loader.module.scss
@@ -4,6 +4,7 @@
 	width: 80px;
 	height: 80px;
 }
+
 .loader div {
 	position: absolute;
 	border: 4px solid var(--inverted-background-color);
@@ -11,9 +12,11 @@
 	border-radius: 50%;
 	animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
+
 .loader div:nth-child(2) {
 	animation-delay: -0.5s;
 }
+
 @keyframes loader {
 	0% {
 		top: 36px;
@@ -22,6 +25,7 @@
 		height: 0;
 		opacity: 0;
 	}
+
 	4.9% {
 		top: 36px;
 		left: 36px;
@@ -29,6 +33,7 @@
 		height: 0;
 		opacity: 0;
 	}
+
 	5% {
 		top: 36px;
 		left: 36px;
@@ -36,9 +41,10 @@
 		height: 0;
 		opacity: 1;
 	}
+
 	100% {
-		top: 0px;
-		left: 0px;
+		top: 0;
+		left: 0;
 		width: 72px;
 		height: 72px;
 		opacity: 0;
