--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -2,6 +2,7 @@
 	cursor: pointer;
 	color: var(--primary-color);
 	border-radius: 25%;
+	padding: 6px 15px;
 }
 
 .clear {
@@ -16,4 +17,49 @@
 	padding: 10px 15px;
 	border: 2px solid var(--primary-color);
 	background: none;
+}
+
+.background {
+	background: var(--bg-color);
+	border: none;
+}
+
+.backgroundInverted {
+	background: var(--inverted-bg-color);
+	border: none;
+}
+
+.square {
+	padding: 0;
+	border-radius: 0;
+}
+
+.square.size_m {
+	width: var(--font-line-m);
+	height: var(--font-line-m);
+	font: var(--font-m);
+}
+
+.square.size_l {
+	width: var(--font-line-l);
+	height: var(--font-line-l);
+	font: var(--font-l);
+}
+
+.square.size_xl {
+	width: var(--font-line-xl);
+	height: var(--font-line-xl);
+	font: var(--font-xl);
+}
+
+.size_m {
+	font: var(--font-m);
+}
+
+.size_l {
+	font: var(--font-l);
+}
+
+.size_xl {
+	font: var(--font-xl);
 }
