--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -6,10 +6,6 @@
 	transition: width 0.25s;
 }
 
-.collapsed {
-	width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
 	position: absolute;
 	bottom: 20px;
@@ -20,4 +16,49 @@
 
 .lang {
 	margin-left: 20px;
+}
+
+.link {
+	display: flex;
+	align-items: center;
+	opacity: 1;
+	gap: 5px;
+
+	.icon {
+		fill: var(--primary-color);
+	}
+}
+
+.items {
+	margin-top: 20px;
+	margin-left: 30px;
+	gap: 10px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.collapsed {
+	width: var(--sidebar-width-collapsed);
+
+	.switchers {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.link > span {
+		opacity: 0;
+		transition: all 0.2s;
+		width: 0;
+	}
+
+	.lang {
+		margin-left: 0;
+	}
+}
+
+.collapseBtn {
+	position: absolute;
+	right: -32px;
+	bottom: 32px;
 }
