added Redux with testing Counter module

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,11 +3,14 @@
 @import 'themes/light';
 @import 'themes/dark';
 
-.app {
-	min-height: 100vh;
-	background: var(--bg-color);
+body {
 	font: var(--font-m);
 	color: var(--primary-color);
+}
+
+.app {
+	background: var(--bg-color);
+	min-height: 100vh;
 }
 
 .content-page {
