--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,6 @@
 :root {
 	--font-family-main: consolas, 'Times New Roman', serif;
+	--font-family-monospace: 'Martian Mono';
 	--font-size-m: 16px;
 	--font-line-m: 24px;
 	--font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
