update profile page  added entities of Currency and Country

--- a/src/shared/ui/Text/ui/Text.module.scss
+++ b/src/shared/ui/Text/ui/Text.module.scss
@@ -17,3 +17,15 @@
 		color: var(--red-dark);
 	}
 }
+
+.right {
+	align-items: right;
+}
+
+.left {
+	align-items: left;
+}
+
+.center {
+	align-items: center;
+}
