--- a/src/entity/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entity/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -1,20 +1,29 @@
 .profileCard {
   padding: 20px;
-  border: 2px solid var(--inverted-bg-color)
-}
-
-.header {
-  display: flex;
-}
-
-.editBtn {
-  margin-left: auto;
+  border: 2px solid var(--inverted-bg-color);
+	column-gap: 10px;
 }
 
 .data {
-  margin-top: 30px;
+	display: flex;
+	flex-direction: column;
+	margin-top: 10px;
 }
 
-.input {
-  margin-top: 10px;
+.avatarWrapper {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+}
+
+.editing {
+	border: 2px solid var(--inverted-primary-color);
+}
+
+.loading,
+.error {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 300px;
 }
