--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -29,11 +29,16 @@
 	color: var(--inverted-primary-color);
 }
 
-.outline {
+.outline,
+.outline_red {
 	font-weight: 500;
 	padding: 10px 15px;
 	border: 2px solid var(--primary-color);
 	background: none;
+}
+.outline_red {
+	border: 2px solid var(--red-dark);
+	color: var(--red-light);
 }
 
 .background {
