--- a/src/shared/ui/Input/ui/UiInput.module.scss
+++ b/src/shared/ui/Input/ui/UiInput.module.scss
@@ -1,5 +1,5 @@
 .inputWrapper {
-	display: flex;
+	display: inline-flex;
 	row-gap: 10px;
 	padding-top: 10px;
 	gap: 5px;
@@ -26,6 +26,10 @@
 .caretWrapper {
 	flex-grow: 1;
 	position: relative;
+}
+
+.readonly {
+	opacity: 0.7;
 }
 
 .caret {
