create tests for profile

--- a/src/shared/ui/Select/ui/UiSelect.module.scss
+++ b/src/shared/ui/Select/ui/UiSelect.module.scss
@@ -4,6 +4,7 @@
 
 .label {
 	margin-right: 5px;
+	color: var(--secondary-color);
 }
 
 .select {
@@ -17,4 +18,8 @@
 .option { 
 	color: var(--inverted-primary-color);
 	background: var(--inverted-bg-color);
+}
+
+.readonly { 
+	opacity: 0.7;
 }
