create templates add skeleton, code and avatar blocks updated ArticleDetailsPage

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,11 @@
 	--secondary-color: #279349;
 	--inverted-primary-color: #257;
 	--inverted-secondary-color: #0ebeff;
+
+	// skeleton
+	--skeleton-color: #1515ad;
+	--skeleton-shadow: #2b2be8;
+
+	// code
+	--code-bg: #353642;
 }
