--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,4 +5,11 @@
 	--secondary-color: #0ebeff;
 	--inverted-primary-color: #2fb45a;
 	--inverted-secondary-color: #279349;
+
+	// skeleton
+	--skeleton-color: rgba(7, 6, 6, 0.198);
+	--skeleton-shadow: rgba(0 0 0 / 20%);
+
+	// code
+	--code-bg: #bfbfc3;
 }
