--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,6 +10,10 @@
 	--font-size-xl: 32px;
 	--font-line-xl: 40px;
 	--font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
+	--font-size-xxl: 40px;
+	--font-line-xxl: 48px;
+	--font-xxl: var(--font-size-xxl) / var(--font-line-xxl) var(--font-family-main);
+
 
 	// Sizes
 	--navbar-height: 50px;
