add article list,  article item,   skeleton and stories

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -7,9 +7,12 @@
 	--inverted-secondary-color: #279349;
 
 	// skeleton
-	--skeleton-color: rgba(7, 6, 6, 0.198);
+	--skeleton-color: rgb(7 6 6 / 19.8%);
 	--skeleton-shadow: rgba(0 0 0 / 20%);
 
 	// code
 	--code-bg: #bfbfc3;
+
+	// code
+	--card-bg: #bfbfc3;
 }
