--- a/src/entity/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entity/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -65,7 +65,10 @@
 	// LIST
 	.list {
 		.types {
-
+			width: 115px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 
 		.viewsWrapper {
@@ -93,11 +96,13 @@
 			width: 100%;
 			max-height: 250px;
 			object-fit: cover;
+			margin: 16px 0;
 		}
 
 		.footer {
 			display: flex;
 			align-items: center;
+			margin-top: 16px;
 		}
 		
 		.textBlock {
