--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -1,3 +1,14 @@
 .articleDetailsPage {
 	
 }
+
+.recommendations {
+	margin-top: 20px;
+	flex-wrap: nowrap;
+	overflow: hidden;
+	overflow-x: auto;
+}
+
+.commentTitle {
+	margin-top: 20px;
+}
