add create and edit pages

--- a/src/shared/ui/Text/ui/UiText.module.scss
+++ b/src/shared/ui/Text/ui/UiText.module.scss
@@ -16,6 +16,16 @@
 	}
 }
 
+.inverted {
+	.text {
+		color: var(--primary-color);
+	}
+	
+	.title {
+		color: var(--secondary-color);
+	}
+}
+
 // align
 .right {
 	text-align: right;
