--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -5,6 +5,11 @@
 	display: flex;
 	align-items: center;
 	padding: 20px;
+	gap: 15px;
+}
+
+.appName {
+	width: var(--sidebar-width);
 }
 
 .links {
