add eslint plugin, fix errors

--- a/src/entity/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entity/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,7 +1,22 @@
+*::-webkit-scrollbar {
+	width: 0px;
+
+}
+
 .blocks {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 30px;
+
+	.card {
+		display: inline-flex;
+		height: 300px;
+	}
+
+	.row {
+		display: flex;
+		gap: 30px;
+	}
 }
 
 .list {
