--- a/src/shared/ui/Text/ui/UiText.module.scss
+++ b/src/shared/ui/Text/ui/UiText.module.scss
@@ -40,6 +40,16 @@
 }
 
 // sizes
+.size_s {
+	.title {
+		font: var(--font-m)
+	}
+
+	.text {
+		font: var(--font-s);
+	}
+}
+
 .size_m {
 	.title {
 		font: var(--font-l)
