--- a/src/shared/ui/Listbox/Listbox.module.scss
+++ b/src/shared/ui/Listbox/Listbox.module.scss
@@ -19,8 +19,25 @@
 	box-shadow: 4px 4px 8px var(--listbox-bg);
 }
 
-.top {
+.optionsTopLeft {
 	bottom: 100%;
+	right: 0;
+
+}
+
+.optionsTopRight {
+	bottom: 100%;
+	left: 0;
+}
+
+.optionsBottomLeft {
+	top: 100%;
+	right: 0;
+}
+
+.optionsBottomRight {
+	top: 100%;
+	left: 0;
 }
 
 .option {
