--- a/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/src/shared/ui/Modal/ui/Modal.module.scss
@@ -16,7 +16,7 @@
 	transition: 0.3s transform;
 	transform: scale(0.5);
 	max-width: 60%;
-	z-index: (--modal-z-index);
+	z-index: var(--modal-z-index);
 }
 
 .opened {
