updated eslint plugin, addd public api for tests

--- a/src/shared/ui/Overlay/Overlay.module.scss
+++ b/src/shared/ui/Overlay/Overlay.module.scss
@@ -4,10 +4,7 @@
 	align-items: center;
 	justify-content: center;
 	position: fixed;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
+	inset: 0ß;
 	z-index: var(--overlay-z-index);
 	cursor: pointer;
 }
