add shared component AppImage

--- a/src/shared/ui/Icon/Icon.module.scss
+++ b/src/shared/ui/Icon/Icon.module.scss
@@ -1,18 +1,25 @@
 .fillPrimary {
 	fill: var(--primary-color);
+	color: var(--primary-color);
 }
 
 .fillSecondary {
 	fill: var(--secondary-color);
+	color: var(--secondary-color);
+
 }
 
 
 .strokePrimary path {
 	stroke: var(--primary-color);
+	color: var(--primary-color);
+
 }
 
 .strokeSecondary {
 	stroke: var(--secondary-color);
+	color: var(--secondary-color);
+
 }
 
 .pointer {
