--- a/src/shared/layouts/MainLayout/ui/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/ui/MainLayout.module.scss
@@ -2,12 +2,14 @@
   min-height: 100vh;
   display: grid;
   grid-template-areas: 'sidebar content rightbar';
-  grid-template-columns: 284px 1fr 100px;
+  grid-template-columns: min-content 1fr 100px;
 }
 
 .sidebar {
   grid-area: sidebar;
   padding: 32px;
+  max-width: 284px;
+  max-height: 100%;
 }
 
 .content {
