--- a/src/shared/ui/redesigned/Card/Card.module.scss
+++ b/src/shared/ui/redesigned/Card/Card.module.scss
@@ -1,13 +1,17 @@
 .card {
   padding: 24px;
-  border-radius: 32px;
 }
 
+.max {
+  width: 100%;
+}
+
+// variants
 .normal {
   background: var(--dark-bg-redesigned);
 }
 
-.normal {
+.light {
   background: var(--light-bg-redesigned);
 }
 
@@ -15,26 +19,28 @@
   border: 1px solid var(--accent-redesigned);
 }
 
-.max {
-  width: 100%;
-}
-
-.gap_0 {
+// gap
+.padding_0 {
   padding: 0;
-  gap: 0;
 }
 
-.gap_8 {
+.padding_8 {
   padding: 8px;
-  gap: 8px;
 }
 
-.gap_16 {
+.padding_16 {
   padding: 16px;
-  gap: 16px;
 }
 
-.gap_24 {
+.padding_24 {
   padding: 24px;
-  gap: 24px;
+}
+
+// border
+.border_round {
+  border-radius: 40px;
+}
+
+.border_normal {
+  border-radius: 12px;
 }
