--- a/src/shared/ui/redesigned/Input/ui/UiInput.module.scss
+++ b/src/shared/ui/redesigned/Input/ui/UiInput.module.scss
@@ -1,56 +1,60 @@
 .inputWrapper {
-  display: inline-flex;
-  gap: 10px;
+  display: flex;
+  align-items: center;
+  border-radius: 48px;
+  padding: 8px 16px;
+  border: 2px solid var(--icon-redesigned);
+
   width: 100%;
 }
 
-.placeholder {
-  color: var(--secondary-color);
-}
+.focused {
+  border: 2px solid var(--accent-redesigned);
 
-.input {
-  background: transparent;
-  border: none;
-  outline: none;
-  color: transparent;
-  font-family: 'Courier New', Courier, monospace;
-  text-shadow: 0 0 0 var(--primary-color);
-  width: 100%;
-
-  &:focus {
-    outline: none;
+  .addonLeft svg,
+  .addonRight svg {
+    color: var(--accent-redesigned);
   }
 }
 
-.caretWrapper {
-  flex-grow: 1;
-  position: relative;
+.addonLeft,
+.addonRight {
+  display: flex;
+}
+
+.withAddonLeft {
+  padding-left: 8px;
+}
+
+.withAddonRight {
+  padding-right: 8px;
+}
+
+.input {
+  border: none;
+  outline: none;
+  background-color: var(--dark-bg-redesigned);
+  color: var(--text-redesigned);
+  width: 100%;
+
+  &::placeholder {
+    color: var(--hint-redesigned);
+  }
 }
 
 .readonly {
   opacity: 0.7;
 }
 
-.caret {
-  position: absolute;
-  height: 3px;
-  width: 9px;
-  background: var(--primary-color);
-  bottom: 2px;
-  left: 0;
-  animation: blink 0.8s forwards infinite;
+// sizes
+.small {
+  height: 32px;
 }
 
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
+.medium {
+  height: 38px;
+}
 
-  50% {
-    opacity: 0.01;
-  }
-
-  100% {
-    opacity: 1;
-  }
+.large {
+  height: 44px;
 }
