add ui design switcher, mutation for  cahnge feature flag , settings page added props for Flex, AppImage, UIText

--- a/src/shared/ui/redesigned/Button/ui/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/ui/Button.module.scss
@@ -49,16 +49,20 @@
 }
 
 .outline {
-  font-weight: 500;
-  padding: 10px 15px;
-  border: 2px solid var(--primary-color);
   background: none;
+  font-weight: 700;
+  padding: 10px 15px;
+  border: 2px solid var(--icon-redesigned);
+  border-radius: 34px;
+
+  &:hover {
+    border: 2px solid var(--accent-redesigned);
+  }
 }
 
 .filled {
   background: var(--light-bg-redesigned);
   border: none;
-  border-radius: 34px;
   outline: none;
 }
 
