--- a/src/shared/ui/redesigned/AppLogo/ui/AppLogo.module.scss
+++ b/src/shared/ui/redesigned/AppLogo/ui/AppLogo.module.scss
@@ -2,6 +2,11 @@
   position: relative;
 }
 
+.appLogo {
+  position: relative;
+  z-index: 10;
+}
+
 .gradientBig {
   position: absolute;
   background: radial-gradient(
