--- a/src/shared/ui/redesigned/Skeleton/Skeleton.module.scss
+++ b/src/shared/ui/redesigned/Skeleton/Skeleton.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 50px;
   position: relative;
-  box-shadow: 0 2px 10px 0 var(--skeleton-shadow);
+  box-shadow: 0 2px 10px 0 var(--dark-bg-redesigned);
   overflow: hidden;
 
   &::before {
@@ -16,7 +16,7 @@
     background: linear-gradient(
       to right,
       transparent 0%,
-      var(--skeleton-color) 50%,
+      var(--light-bg-redesigned) 50%,
       transparent 100%
     );
     animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
