--- a/src/shared/ui/redesigned/Text/ui/UiText.module.scss
+++ b/src/shared/ui/redesigned/Text/ui/UiText.module.scss
@@ -6,6 +6,13 @@
   color: var(--text-redesigned);
 }
 
+.bold {
+  .title,
+  .text {
+    font-weight: 700;
+  }
+}
+
 .error {
   .title {
     color: var(--cancel-redesigned);
