--- a/src/shared/ui/redesigned/Modal/ui/Modal.module.scss
+++ b/src/shared/ui/redesigned/Modal/ui/Modal.module.scss
@@ -12,7 +12,6 @@
 .content {
   padding: 20px;
   border-radius: 12px;
-  background-color: var(--bg-color);
   transition: 0.3s transform;
   transform: scale(0.5);
   max-width: 60%;
@@ -32,5 +31,17 @@
 .closing {
   .content {
     transform: scale(0.2);
+  }
+}
+
+.modalNew {
+  .content {
+    background: var(--light-bg-redesigned);
+  }
+}
+
+.modalOld {
+  .content {
+    background: var(--bg-color);
   }
 }
