--- a/src/shared/ui/redesigned/Overlay/Overlay.module.scss
+++ b/src/shared/ui/redesigned/Overlay/Overlay.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   position: fixed;
-  inset: 0ß;
+  inset: 0;
   z-index: var(--overlay-z-index);
   cursor: pointer;
 }
