--- a/src/shared/ui/redesigned/Drawer/Drawer.module.scss
+++ b/src/shared/ui/redesigned/Drawer/Drawer.module.scss
@@ -7,7 +7,6 @@
 }
 
 .sheet {
-  background: var(--bg-color);
   left: 2vw;
   border-radius: 12px 12px 0;
   position: fixed;
@@ -25,5 +24,17 @@
 
   .content {
     transform: translateY(0%);
+  }
+}
+
+.drawerNew {
+  .sheet {
+    background: var(--light-bg-redesigned);
+  }
+}
+
+.drawerOld {
+  .sheet {
+    background: var(--bg-color);
   }
 }
