--- a/src/shared/ui/redesigned/Popups/styles/popup.module.scss
+++ b/src/shared/ui/redesigned/Popups/styles/popup.module.scss
@@ -14,12 +14,11 @@
   outline: none;
   padding: 0;
   margin: 0;
-  gap: 8px;
+  cursor: pointer;
 }
 
 .active {
-  background-color: var(--light-bg-redesigned);
-  cursor: pointer;
+  background: var(--light-bg-redesigned);
 }
 
 .optionsTopLeft {
